# yunxu_raspberry_ai

./: .gitignore  README.md  pyproject.toml
apps/pc-server/: README.md
apps/rpi-client/: README.md  pyproject.toml
apps/rpi-client/src/rpi_client/: __init__.py  config.py  describe_runtime.py  main.py  runtime.py  types.py
apps/rpi-client/src/rpi_client/camera/: __init__.py  base.py  file_camera.py  mock_camera.py  pi_camera.py
apps/rpi-client/src/rpi_client/mission/: controller.py
apps/rpi-client/src/rpi_client/model/: __init__.py  base.py  mock_vision.py  ollama_adapter.py  parser.py
apps/rpi-client/src/rpi_client/motor/: __init__.py  base.py  mock_motor.py
apps/rpi-client/src/rpi_client/network/: __init__.py
apps/rpi-client/src/rpi_client/safety/: __init__.py  watchdog.py
config/: defaults.toml  user.toml.example
docs/: api-contract.md  architecture.md  configuration.md  development-phases.md  hardware-bom.md  runtime-usage.md  software-stack.md
scripts/: 320240.sh  README.md  camera_modes.sh  capture_photo.sh  demo.sh  describe_image.sh  list_camera_resolutions.sh  list_ollama_models.sh  ollama_models.sh  start_robot_core.sh  start_rpi_client.sh
src/robot_core/: __init__.py  config.py  describe_runtime.py  main.py  runtime.py  timing.py
src/robot_core/camera/: base.py  file_camera.py  mock_camera.py  pi_camera.py
src/robot_core/mission/: __init__.py  controller.py
src/robot_core/model/: base.py  mock_vision.py  ollama_adapter.py  parser.py
src/robot_core/motor/: base.py  mock_motor.py
src/robot_core/safety/: watchdog.py
