[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-core"
version = "0.1.0"
description = "Raspberry Pi main runtime for the AI toy-search car"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
hardware = [
  "gpiozero>=2.0",
  "opencv-python>=4.10",
]
audio = [
  "sounddevice>=0.5",
]
model = [
  "httpx>=0.27",
]
stt = [
  "faster-whisper>=1.1",
  "vosk>=0.3.45",
]

[project.scripts]
robot-core = "robot_core.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
